<resources>
    <string name="app_name">L2_Q1</string>
    <string name="student_number">Student Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="university_of_british_columbia_logo">University of British Columbia Logo</string>
    <string name="gender">Gender</string>
    <string name="division">Division</string>
    <string name="submit">SUBMIT</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="summary">Summary</string>
    <string name="done">Done</string>
    <string name="name" />
    <string name="i_am_not_a_robot">I am not a robot</string>
    <string name="enter_your_student_number">Enter Your Student Number</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="name2">Name:</string>
    <string name="student_num2">Student Number:</string>
    <string name="gender2">Gender:</string>
    <string name="division2">Division:</string>
    <string-array name="divisions">
        <item>COSC</item>
        <item>DATA</item>
        <item>MATH</item>
    </string-array>
</resources>