<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/UBClogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="0sp"
        android:src="@drawable/_narrowlogo_ex_768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/university_of_british_columbia_logo"/>

    <TextView
        android:id="@+id/studentNumberField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:layout_marginStart="10sp"
        android:text="@string/student_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/studentNumber"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:layout_marginTop="130sp"
        android:layout_marginStart="150sp"
        android:hint="@string/enter_your_student_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />
    <TextView
        android:id="@+id/lastNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:layout_marginStart="10sp"
        android:text="@string/last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/lastName"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="180sp"
        android:layout_marginStart="150sp"
        android:hint="@string/enter_your_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />
    <TextView
        android:id="@+id/firstNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250sp"
        android:layout_marginStart="10sp"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/firstName"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="230sp"
        android:layout_marginStart="150sp"
        android:hint="@string/enter_your_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />
    <TextView
        android:id="@+id/genderField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300sp"
        android:layout_marginStart="10sp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/male"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="300sp"
            android:layout_marginStart="200sp"
            android:text="@string/male"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <RadioButton
            android:id="@+id/female"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="0sp"
            android:layout_marginStart="200sp"
            android:text="@string/female"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </RadioGroup>
    <TextView
        android:id="@+id/divisionField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="415sp"
        android:layout_marginStart="10sp"
        android:text="@string/division"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Spinner
        android:id="@+id/division"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400sp"
        android:layout_marginStart="200sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <CheckBox
        android:id="@+id/robot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450sp"
        android:layout_marginStart="10sp"
        android:text="@string/i_am_not_a_robot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300sp"
        android:layout_marginTop="520sp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>